# agua_vulnerabilidad_ods

./: .gitignore  LICENSE  README.md  _quarto.yml  index.html  index.qmd  index.quarto_ipynb_1  main.py  pyproject.toml  styles.css
Docs/: index.html
Quarto/: index.qmd
Quarto/docs/: index.html
docs/: index.html  search.json  styles.css
docs/notebook/: 01_exploracion_inicial.html  02_Analisis_Prioritario_y_Soluciones.html  03_Analisis_Focalizado_y_Dimensionamiento_de_Soluciones_Hidraulicas.html  04_Visualizacion_y_Reporte_de_Impacto_ODS6.html  IndiceDeRezagoSocial.html  ServicioAguaEntubada.html  SuministroDiarioDeAgua.html
notebook/: 001_procesamiento_poblacion.ipynb  003_Analisis_vulnerabilidad.ipynb  004_Atlas_cartografico.ipynb  005_simulacion_solucion.ipynb  02_Analisis_Prioritario_y_Soluciones.ipynb  03_Analisis_Focalizado_y_Dimensionamiento_de_Soluciones_Hidraulicas.ipynb  04_Visualizacion_y_Reporte_de_Impacto_ODS6.ipynb  All_Javivi.ipynb  Analisis_SolucionJavivi.ipynb  IndiceDeRezagoSocial.ipynb  ServicioAguaEntubada.ipynb  SuministroDiarioDeAgua.ipynb
notebook/.ipynb_checkpoints/: 01_exploracion_inicial-checkpoint.ipynb  03_Analisis_Focalizado_y_Dimensionamiento_de_Soluciones_Hidraulicas-checkpoint.ipynb  IndiceDeRezagoSocial-checkpoint.ipynb
pruebaEmilio/: index.html  index.qmd
pruebaEmilio/notebook/: 001_procesamiento_poblacion-preview.html  001_procesamiento_poblacion.ipynb  001_procesamiento_poblacion.out.ipynb  002_procesamiento_acuiferos.ipynb  All_Javivi.ipynb  (+21 more)
pruebaJafet/: index.html  index.ipynb
pruebaJavi/: index.html  index.ipynb
(+3 files in other folders)
